// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Policy Guidance Snapshot Tests renders correctly with policy guidance 1`] = `
<div>
  <div
    class="space-y-3"
  >
    <div
      class="flex items-center gap-2 mb-3"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-chart-column h-4 w-4 text-purple-400"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3 3v16a2 2 0 0 0 2 2h16"
        />
        <path
          d="M18 17V9"
        />
        <path
          d="M13 17V5"
        />
        <path
          d="M8 17v-3"
        />
      </svg>
      <h4
        class="font-semibold text-foreground/80"
      >
        Policy Context
      </h4>
    </div>
    <div
      class="space-y-2"
    >
      <div
        class="p-3 rounded-lg border bg-gray-800/50 border-gray-700 text-sm"
      >
        <div
          class="flex items-start gap-2"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-info h-4 w-4 mt-0.5 text-blue-400"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <path
              d="M12 16v-4"
            />
            <path
              d="M12 8h.01"
            />
          </svg>
          <div>
            <h5
              class="font-medium text-foreground"
            >
              Role Hierarchy
            </h5>
            <p
              class="text-foreground/70 mt-1 leading-relaxed"
            >
              Your role has higher authority than the remote user's role.
            </p>
          </div>
        </div>
      </div>
      <div
        class="p-3 rounded-lg border bg-gray-800/50 border-gray-700 text-sm"
      >
        <div
          class="flex items-start gap-2"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-info h-4 w-4 mt-0.5 text-blue-400"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <path
              d="M12 16v-4"
            />
            <path
              d="M12 8h.01"
            />
          </svg>
          <div>
            <h5
              class="font-medium text-foreground"
            >
              Critical Field Change
            </h5>
            <p
              class="text-foreground/70 mt-1 leading-relaxed"
            >
              Changes to 'status' affect task state fundamentally.
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Policy Guidance Snapshot Tests renders correctly without policy guidance 1`] = `<div />`;

exports[`Policy Guidance Snapshot Tests renders null when no applicable explanations 1`] = `
<div>
  <div
    class="space-y-3"
  >
    <div
      class="flex items-center gap-2 mb-3"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-chart-column h-4 w-4 text-purple-400"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3 3v16a2 2 0 0 0 2 2h16"
        />
        <path
          d="M18 17V9"
        />
        <path
          d="M13 17V5"
        />
        <path
          d="M8 17v-3"
        />
      </svg>
      <h4
        class="font-semibold text-foreground/80"
      >
        Policy Context
      </h4>
    </div>
    <div
      class="space-y-2"
    />
  </div>
</div>
`;
